# podio

./: CMakeLists.txt  README_EIC.md
cmake/: podioConfig.cmake.in  podioCreateConfig.cmake
include/podio/: CollectionBase.h  ObjBase.h  ROOTReader.h
lcio/: lcio-edm.yaml
lcio/cmake/: LCIO2Config.cmake.in  LCIO2ConfigVersion.cmake.in
lcio2/: CMakeLists.txt  datalayout.yaml  lcio-edm.yaml  lcio2-edm-extensions.yaml
lcio2/cmake/: LCIO2Config.cmake.in
lcio2_tools/: CMakeLists.txt  README.md
lcio2_tools/examples/: CMakeLists.txt  read.cc  simpleread.cc
lcio2_tools/include/: lcio2utils.h
lcio2_tools/src/: lcio2legacy.cc  lcio2utils.cc  legacy2lcio2.cc  read.cc
python/: CMakeLists.txt  podio_class_generator.py  podio_config_reader.py  podio_templates.py
src/: ROOTWriter.cc  selection.xml
templates/: Collection.cc.template  Collection.h.template  ConstObject.h.template  ConstRefVector.h.template  Data.h.template  Obj.cc.template  Obj.h.template  Object.h.template  RefVector.h.template  linkdef.h.template  selection.xml.template
tests/: CMakeLists.txt
